--- a/project_1/styles/styles.css
+++ b/project_1/styles/styles.css
@@ -1,5 +1,6 @@
 .flex1{
-    background-image: url('/Data/img/background1.jpg');
+    /* background-image: url('/Data/img/background1.jpg'); */
+    background: linear-gradient(180.43deg, rgb(0 0 0 / 60%) 0%, rgba(0, 0, 0, 0.8) 100%), url(/Data/img/background1.jpg);
     height: 500px;
     background-size: cover;
     align-content: center;
@@ -7,3 +8,40 @@
     color: white;
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
+.headerr{
+    background-color: white;
+    padding: 2%;
+    width: 100%;
+    }
+    .h-title{
+        display: flex;
+        align-items: center;
+    }
+    .title{
+        font-size: x-large;
+        font-weight:bolder;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .logo{
+        background-color: rgb(0, 0, 0,0.3);
+        border-radius: 50%;
+        border: 1px;
+        display: inline-block;
+        height: 50px;
+        width: 50px;
+        align-content: center;
+        padding-left: 5%;
+        height: 150%;
+    }
+    body{
+        margin: 0;
+    }
+    .nav-links{
+        text-transform: uppercase; /*uppercase the test*/
+        font-weight: bold; /* Adjusts font weight */
+    
+    }
+    .nav-top{
+        display: flex;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
